--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     build: ./master_docker
     image: pwn3_master
     container_name: pwn3_master
-    hostname: master_docker.pwn3
+    hostname: master.pwn3
     ports:
       - "3333:3333"
     volumes:
@@ -23,6 +23,7 @@ services:
     build: ./game_docker
     image: pwn3_game
     container_name: pwn3_game
+    hostname: game.pwn3
     ports: 
       - 3000-3010:3000-3010
     depends_on:
