--- a/game_docker/server.ini
+++ b/game_docker/server.ini
@@ -1,9 +1,9 @@
 [MasterServer]
-Hostname=master_docker.pwn3
+Hostname=master.pwn3
 Port=3333
 
 [GameServer]
-Hostname=localhost
+Hostname=game.pwn3
 Port=3000
 Username=GameServer
 Password=PasswordForGameServer!!!
