Updated the SSL certificate
The original SSL certificate has expired, so I have replaced it with a certificate generated using the same private key and metadata as the original.

--- a/game_docker/Dockerfile
+++ b/game_docker/Dockerfile
@@ -16,5 +16,6 @@ RUN useradd -s /bin/bash pwn3 \
  && rm -rf /tmp/PwnAdventure3Servers
 USER pwn3
 COPY server.ini /opt/pwn3/PwnAdventure3/Content/Server/
+COPY server.crt /opt/pwn3/PwnAdventure3/Content/Server/
 WORKDIR /opt/pwn3/PwnAdventure3/Binaries/Linux/
 ENTRYPOINT /opt/pwn3/PwnAdventure3/Binaries/Linux/PwnAdventure3Server
